--- a/SimpleWasm/Shared/NavMenu.razor
+++ b/SimpleWasm/Shared/NavMenu.razor
@@ -15,22 +15,24 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Names">
+                <span class="oi oi-person" aria-hidden="true"></span> Names
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="Addresses">
+                <span class="oi oi-book" aria-hidden="true"></span> Addresses
             </NavLink>
         </div>
+
+
     </nav>
 </div>
 
 @code {
     private bool collapseNavMenu = true;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
